--- a/oferta-ingles/index.html
+++ b/oferta-ingles/index.html
@@ -3,6 +3,12 @@
 <head>
   <meta charset="UTF-8">
   <meta name="viewport" content="width=device-width, initial-scale=1.0">
+	<script
+	  src="https://cdn.utmify.com.br/scripts/utms/latest.js"
+	  data-utmify-prevent-subids
+	  async
+	  defer
+	></script>
   <title>Atividade infantil</title>
   <!-- Tailwind CSS CDN -->
   <script src="https://cdn.tailwindcss.com"></script>
